# chi_tui

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: widgets_spec.md
docs/widgets/: form.md  json_viewer.md  markdown.md  menu.md  panel.md  result_viewer.md  watchdog.md
example-app/: CHANGELOG.md  README.md  example-app-wrapper  pyproject.toml
example-app/.tui/: README.md  advanced.yaml  chi-index.yaml  config.yaml  forms.yaml  lists.yaml  panel_b.yaml  panels.yaml  progress.yaml
example-app/.tui/docs/: quick_start.md  shortcuts.md  welcome.md  widgets.md  yaml_guide.md
example-app/.tui/panels/: demo_json.yaml  form_hello.yaml  form_settings.yaml  list_actions.yaml  panel_b_watchdog_stats.yaml  panel_nested_watchdog.yaml  show_config.yaml  task_detail.yaml
example-app/src/example_app/: __main__.py  cli.py
example-app/src/example_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
example-app/src/example_app/config/: logo.txt  main.yaml  markdown_demo.md  nav.yaml  panel_b.yaml  panel_b_form_grouped_settings.yaml  panel_b_form_grouped_settings_auto.yaml  panel_b_form_hello.yaml  panel_b_form_hello_auto.yaml  panel_b_form_list_tasks.yaml  panel_b_form_list_tasks_dyn.yaml  panel_b_form_params.yaml  panel_b_form_password.yaml  panel_b_form_sum.yaml  panel_b_form_sum_auto.yaml  panel_b_form_tags_dyn.yaml  panel_b_form_text_auto.yaml  panel_b_form_textarea.yaml  panel_b_menu.yaml
src/: main.rs  model.rs  theme.rs  ui.rs  visuals.rs
src/app/: mod.rs  tests.rs
src/chi_core/: focus.rs  mod.rs  registry.rs
(+35 files in other folders)
