[package]
name = "chi-tui"
version = "0.1.0"
edition = "2021"
description = "Ratatui-based TUI that consumes a Python CLI via JSON envelope."
license = "AGPL-3.0-only"
repository = "https://github.com/contextops/chi_tui"
homepage = "https://github.com/contextops/chi_tui"
authors = ["CHI TUI Team <devnull@example.com>"]

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
shlex = "1"
regex = "1"
tui-textarea = "0.7"
syntect = { version = "5", default-features = false, features = ["parsing", "default-fancy"] }
arboard = "3"
